Fix hero responsiveness

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,7 +4,7 @@ import Container from "./Container.astro";
 ---
 
 <Container class="flex flex-1 items-center justify-center" small>
-  <div class="lg:w-2/3">
+  <div>
     <div class="mb-4 text-right text-4xl sm:text-6xl md:text-8xl">
       🚀
     </div>
