Improve markup of features section

--- a/src/components/FeaturesBlock.astro
+++ b/src/components/FeaturesBlock.astro
@@ -11,7 +11,7 @@ import Highlight from "./Highlight.astro"
       🦾
     </h2>
 
-    <div class="space-y-8 lg:space-y-12 lg:divide-y">
+    <div class="space-y-8 lg:space-y-12">
       <FeatureItem icon="🏗️" title="Any Stage">
         <p>
           Whether you're just beginning with an <Highlight>idea</Highlight>, have an <Highlight>MVP</Highlight>, or are running an <Highlight>existing business</Highlight>, Razom is here to support you. Connect with like-minded individuals who can help you elevate your venture to new heights.
