--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="w-screen overflow-x-hidden antialiased">
+  <body class="w-screen overflow-x-hidden antialiased bg-gray-900">
     <slot />
   </body>
 </html>
