Add GoogleAnalytics and Mailchimp

--- a/src/components/SubscribeBlock.astro
+++ b/src/components/SubscribeBlock.astro
@@ -14,13 +14,22 @@ import Waves from "./Waves.astro"
       Get early access to Razom's platform and start connecting with enthusiasts just like you
     </p>
 
-    <form class="relative mx-auto w-full max-w-[540px]">
+    <form
+      action="https://app.us18.list-manage.com/subscribe/post?u=6c3647ce1a45a0ed6cf127816&id=939087d9d7&f_id=00eb1be7f0"
+      method="post"
+      target="_self"
+      class="relative mx-auto w-full max-w-[540px]"
+    >
       <input
-        name="email"
-        placeholder="Your Email"
         type="email"
+        name="EMAIL"
+        placeholder="Your Email"
         class="focus:ring-brand-600 w-full rounded-full bg-white px-8 py-6 pr-24 text-xl font-medium text-slate-800 focus:outline-none focus:ring-2 md:text-2xl"
-        >
+      >
+
+      <div style="position: absolute; left: -5000px;" aria-hidden="true">
+        <input type="text" name="b_6c3647ce1a45a0ed6cf127816_939087d9d7" tabindex="-1" value="">
+      </div>
 
       <button
         class="absolute right-2 top-1/2 h-16 w-16 -translate-y-1/2 rounded-full bg-indigo-500 text-2xl font-bold transition duration-200 ease-in-out hover:scale-105 hover:bg-indigo-600 active:scale-95"
