--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ export interface Props {
 }
 
 const { title } = Astro.props;
+const GA_ID = import.meta.env.PUBLIC_GA_ID;
 ---
 
 <!DOCTYPE html>
@@ -16,6 +17,13 @@ const { title } = Astro.props;
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+
+    {GA_ID && (
+      <script
+        type="text/partytown"
+        src={`https://www.googletagmanager.com/gtag/js?id=${GA_ID}`}
+      ></script>
+    )}
   </head>
   <body class="w-screen overflow-x-hidden antialiased bg-gray-900">
     <slot />
