Update GoogleAnalytics script

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,17 @@ const GA_ID = import.meta.env.PUBLIC_GA_ID;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
 
-    {GA_ID && <script async src={`https://www.googletagmanager.com/gtag/js?id=${GA_ID}`}></script>}
+    {GA_ID && (
+      <>
+        <script async src={`https://www.googletagmanager.com/gtag/js?id=${GA_ID}`}></script>
+        <script define:vars={{ GA_ID }}>
+          window.dataLayer = window.dataLayer || []
+          function gtag(){ dataLayer.push(arguments) }
+          gtag("js", new Date())
+          gtag("config", GA_ID)
+        </script>
+      </>
+    )}
   </head>
   <body class="w-screen overflow-x-hidden antialiased bg-gray-900">
     <slot />
