--- a/src/components/FromCreatorBlock.astro
+++ b/src/components/FromCreatorBlock.astro
@@ -2,15 +2,15 @@
 import Container from "./Container.astro"
 import Waves from "./Waves.astro"
 ---
-<Waves wavesColor="fill-gray-900" bgColor="bg-brand-500" />
+<Waves wavesColor="fill-slate-900" bgColor="bg-brand-500 dark:bg-slate-400" />
 
-<div class="bg-gray-900 py-24 text-white">
+<div class="bg-slate-900 py-24 text-slate-400">
   <Container small>
-    <h2 class="mb-2 text-3xl font-extrabold tracking-tight sm:text-5xl md:mb-4 md:text-7xl">
+    <h2 class="mb-2 text-3xl font-extrabold tracking-tight text-slate-200 sm:text-5xl md:mb-4 md:text-7xl">
       From Creator
     </h2>
 
-    <div class="space-y-4 font-medium md:text-xl">
+    <div class="space-y-4 md:text-xl">
       <p>
         Hey there, I'm Andrew, the person behind Razom. For over a decade, I struggled to find partners and like-minded people to share my business dreams with. As an introvert with ADHD, I found it challenging to network and connect with others who shared my passion.
       </p>
