--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,7 +13,7 @@ import Container from "./Container.astro";
       Where Enthusiasts Unite <span class="whitespace-nowrap md:whitespace-normal">and Dreams</span> Take Flight
     </h1>
 
-    <p class="mb-4 text-lg text-gray-400 sm:text-xl md:mb-8 md:text-3xl">
+    <p class="mb-4 text-lg text-slate-400 sm:text-xl md:mb-8 md:text-3xl">
       Razom connects ordinary people like you and me and helps them build cool products
     </p>
 
