--- a/src/components/HowItWorksBlock.astro
+++ b/src/components/HowItWorksBlock.astro
@@ -2,13 +2,13 @@
 import Container from "./Container.astro"
 import HowItWorksItem from "./HowItWorksItem.astro"
 ---
-<div class="bg-slate-50 py-24 text-black">
+<div class="bg-slate-50 py-24 text-black dark:bg-slate-800 dark:text-white">
   <Container class="space-y-20">
     <div class="text-center">
       <h2 class="mb-2 text-center text-4xl font-extrabold tracking-tight sm:text-5xl md:mb-4 md:text-7xl">
         How It Works
       </h2>
-      <p class="text-xl text-slate-600 md:text-2xl">Just 3 simple steps</p>
+      <p class="text-xl text-slate-600 dark:text-slate-300 md:text-2xl">Just 3 simple steps</p>
     </div>
 
     <HowItWorksItem number="1" icon="💡" title="Publish your project or idea">
