--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import FromCreatorBlock from "../components/FromCreatorBlock.astro"
 import FooterBlock from "../components/FooterBlock.astro"
 ---
 
-<Layout title="Razom &mdash; Where Enthusiasts Unite and Dreams Take Flight">
+<Layout title="Razom — Where Enthusiasts Unite and Dreams Take Flight">
   <HeaderBlock />
   <FeaturesBlock />
   <QuoteBlock />
