--- a/src/components/ButtonLink.astro
+++ b/src/components/ButtonLink.astro
@@ -1,9 +1,12 @@
 ---
 import { twMerge } from "tailwind-merge"
 
-const { class: className } = Astro.props
+const { href, class: className } = Astro.props
 ---
 
-<a class={twMerge("inline-block text-xl font-semibold px-6 py-2.5 rounded-full bg-brand-500 hover:bg-brand-600", className)}>
+<a
+  href={href}
+  class={twMerge("inline-block text-xl font-semibold px-6 py-2.5 rounded-full bg-brand-500 hover:bg-brand-600 text-white", className)}
+>
   <slot />
 </a>
