--- a/src/components/FeaturesBlock.astro
+++ b/src/components/FeaturesBlock.astro
@@ -3,9 +3,9 @@ import Container from "./Container.astro"
 import FeatureItem from "./FeatureItem.astro"
 import Highlight from "./Highlight.astro"
 ---
-<div class="bg-slate-50 text-black">
+<div class="bg-slate-50 text-black dark:bg-slate-800 dark:text-slate-400">
   <Container class="py-24 md:py-48" small>
-    <h2 class="mb-16 text-center text-4xl font-extrabold tracking-tight sm:text-5xl md:mb-24 md:text-7xl">
+    <h2 class="mb-16 text-center text-4xl font-extrabold tracking-tight dark:text-slate-200 sm:text-5xl md:mb-24 md:text-7xl">
       Discover the Power of
       <span class="text-brand-500">Razom</span>
       🦾
