--- a/src/components/FooterBlock.astro
+++ b/src/components/FooterBlock.astro
@@ -21,7 +21,7 @@ const items = [
 ];
 ---
 
-<div class="bg-gray-900 py-12 text-white">
+<div class="bg-slate-900 py-12 text-white">
   <Container class="flex items-center justify-between" small>
     <a href="/" class="font-bold">Razom &copy; 2023</a>
 
