--- a/src/components/Highlight.astro
+++ b/src/components/Highlight.astro
@@ -1,1 +1,1 @@
-<span class="text-brand-500 font-semibold"><slot /></span>
+<span class="font-semibold text-brand-500 dark:text-slate-200"><slot /></span>
