--- a/src/components/HowItWorksItem.astro
+++ b/src/components/HowItWorksItem.astro
@@ -9,7 +9,7 @@ const { number, icon, title } = Astro.props
     <span class="text-brand-500">{number}.</span>
     {title}
   </h3>
-  <div class="text-slate-600 md:text-lg">
+  <div class="text-slate-600 dark:text-slate-300 md:text-lg">
     <slot />
   </div>
 </div>
