--- a/src/components/QuoteBlock.astro
+++ b/src/components/QuoteBlock.astro
@@ -2,16 +2,16 @@
 import Container from "./Container.astro"
 import Waves from "./Waves.astro"
 ---
-<Waves wavesColor="fill-slate-200" bgColor="bg-slate-50" />
+<Waves wavesColor="fill-slate-200 dark:fill-slate-400" bgColor="bg-slate-50 dark:bg-slate-800" />
 
-<div class="flex items-center justify-center bg-slate-200 py-48 text-black">
+<div class="flex items-center justify-center bg-slate-200 py-48 text-black dark:bg-slate-400">
   <Container small>
     <div class="-skew-x-6 -skew-y-3 text-center">
       <p class="mb-2 font-serif text-xl text-slate-800 sm:text-3xl md:text-4xl lg:mb-6 lg:text-6xl">
         If you want to go fast, go alone.<br>
-        If you want to go far, go <span class="bg-brand-500 px-2 font-medium text-white">Razom</span>
+        If you want to go far, go <span class="bg-brand-500 px-1 font-medium text-white md:px-2">Razom</span>
       </p>
-      <p class="text-sm text-slate-700 sm:text-base md:text-lg lg:text-xl">
+      <p class="text-sm text-slate-700 dark:text-slate-800 sm:text-base md:text-lg lg:text-xl">
         <span class="font-medium">Razom</span>
         is an Ukrainian word meaning
         "<span class="font-medium">together</span>"
@@ -20,4 +20,4 @@ import Waves from "./Waves.astro"
   </Container>
 </div>
 
-<Waves wavesColor="fill-slate-200" bgColor="bg-slate-50" flip />
+<Waves wavesColor="fill-slate-200 dark:fill-slate-400" bgColor="bg-slate-50 dark:bg-slate-800" flip />
