--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ export interface Props {
   title: string
 }
 
-const { title } = Astro.props;
+const { title } = Astro.props
 const GA_ID = import.meta.env.PUBLIC_GA_ID;
 ---
 
@@ -23,14 +23,14 @@ const GA_ID = import.meta.env.PUBLIC_GA_ID;
         <script async src={`https://www.googletagmanager.com/gtag/js?id=${GA_ID}`}></script>
         <script define:vars={{ GA_ID }}>
           window.dataLayer = window.dataLayer || []
-          function gtag(){ dataLayer.push(arguments) }
+          function gtag() { dataLayer.push(arguments) }
           gtag("js", new Date())
           gtag("config", GA_ID)
         </script>
       </>
     )}
   </head>
-  <body class="w-screen overflow-x-hidden antialiased bg-gray-900">
+  <body class="w-screen overflow-x-hidden bg-slate-900 antialiased">
     <slot />
   </body>
 </html>
