--- a/src/components/SubscribeBlock.astro
+++ b/src/components/SubscribeBlock.astro
@@ -1,4 +1,6 @@
 ---
+import { t } from "i18next"
+
 import Container from "./Container.astro"
 import Waves from "./Waves.astro"
 
@@ -8,14 +10,14 @@ const MAILCHIMP_TAGS = import.meta.env.PUBLIC_MAILCHIMP_TAGS
 ---
 <Waves wavesColor="fill-brand-500 dark:fill-slate-400" bgColor="bg-slate-50 dark:bg-slate-800" />
 
-<div class="flex items-center justify-center bg-brand-500 py-24 text-white dark:bg-slate-400 dark:text-slate-800 md:py-36">
+<div id="join-beta" class="flex items-center justify-center bg-brand-500 py-24 text-white dark:bg-slate-400 dark:text-slate-800 md:py-36">
   <Container small>
     <h2 class="mb-8 text-center text-4xl font-extrabold tracking-tight sm:text-5xl md:mb-16 md:text-7xl">
-      Are You Ready to Chase Your Dreams?
+      {t("subscribe.title")}
     </h2>
 
     <p class="mb-8 text-center font-medium dark:text-slate-700 md:mb-16 md:text-2xl">
-      Get early access to Razom's platform and start connecting with enthusiasts just like you
+      {t("subscribe.subTitle")}
     </p>
 
     <form
@@ -27,9 +29,9 @@ const MAILCHIMP_TAGS = import.meta.env.PUBLIC_MAILCHIMP_TAGS
       <input
         type="email"
         name="EMAIL"
-        placeholder="Your Email"
+        placeholder={t("subscribe.emailPlaceholder")}
         class="w-full rounded-full bg-white px-8 py-6 pr-24 text-xl font-medium text-slate-800 ring-4 ring-brand-600 dark:ring-slate-500 placeholder:text-slate-500 focus:outline-none focus:ring-2 dark:bg-slate-300 md:text-2xl"
-        >
+      >
 
       <div class="hidden">
         <input type="hidden" name="tags" value={MAILCHIMP_TAGS}>
