--- a/src/components/Waves.astro
+++ b/src/components/Waves.astro
@@ -7,7 +7,7 @@ const {
 ---
 
 <svg
-  class={`h-[10vh] min-h-10 max-h-16 md:min-h-24 md:max-h-36 w-full relative mb-[-7px] ${wavesColor} ${bgColor} ${flip && "rotate-180"}`}
+  class={`h-[72px] md:h-[144px] w-full relative ${wavesColor} ${bgColor} ${flip && "rotate-180"}`}
   xmlns="http://www.w3.org/2000/svg"
   xmlns:xlink="http://www.w3.org/1999/xlink"
   viewBox="0 24 144 28"
