--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,18 @@
 ---
-import Layout from "../layouts/Layout.astro"
-import HeaderBlock from "../components/HeaderBlock.astro"
-import FeaturesBlock from "../components/FeaturesBlock.astro"
-import QuoteBlock from "../components/QuoteBlock.astro"
-import HowItWorksBlock from "../components/HowItWorksBlock.astro"
-import SubscribeBlock from "../components/SubscribeBlock.astro"
-import FromCreatorBlock from "../components/FromCreatorBlock.astro"
-import FooterBlock from "../components/FooterBlock.astro"
+import { t, changeLanguage } from "i18next";
+import Layout from "../layouts/Layout.astro";
+import HeaderBlock from "../components/HeaderBlock.astro";
+import FeaturesBlock from "../components/FeaturesBlock.astro";
+import QuoteBlock from "../components/QuoteBlock.astro";
+import HowItWorksBlock from "../components/HowItWorksBlock.astro";
+import SubscribeBlock from "../components/SubscribeBlock.astro";
+import FromCreatorBlock from "../components/FromCreatorBlock.astro";
+import FooterBlock from "../components/FooterBlock.astro";
+
+changeLanguage("en");
 ---
 
-<Layout title="Razom — Where Enthusiasts Unite and Dreams Take Flight">
+<Layout title={t("site.title")}>
   <HeaderBlock />
   <FeaturesBlock />
   <QuoteBlock />
