--- a/src/components/FromCreatorBlock.astro
+++ b/src/components/FromCreatorBlock.astro
@@ -4,9 +4,9 @@ import Waves from "./Waves.astro"
 ---
 <Waves wavesColor="fill-slate-900" bgColor="bg-brand-500 dark:bg-slate-400" />
 
-<div class="bg-slate-900 py-24 text-slate-400">
+<div id="contact" class="bg-slate-900 py-24 text-slate-400">
   <Container small>
-    <h2 class="mb-2 text-3xl font-extrabold tracking-tight text-slate-200 sm:text-5xl md:mb-4 md:text-7xl">
+    <h2 class="mb-2 text-3xl font-extrabold tracking-tight text-slate-100 dark:text-slate-200 sm:text-5xl md:mb-4 md:text-7xl">
       From Creator
     </h2>
 
