--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,5 @@
 ---
+import { t } from "i18next"
 import ButtonLink from "./ButtonLink.astro"
 import Container from "./Container.astro";
 ---
@@ -10,15 +11,15 @@ import Container from "./Container.astro";
     </div>
 
     <h1 class="mb-2 text-3xl font-extrabold tracking-tight sm:text-5xl md:mb-4 md:text-7xl">
-      Where Enthusiasts Unite <span class="whitespace-nowrap md:whitespace-normal">and Dreams</span> Take Flight
+      {t("hero.title")}
     </h1>
 
     <p class="mb-4 text-lg text-slate-400 sm:text-xl md:mb-8 md:text-3xl">
-      Razom connects ordinary people like you and me and helps them build cool products
+      {t("hero.subTitle")}
     </p>
 
     <ButtonLink href="#join-beta" class="mx-auto">
-      Join the Private Beta
+      {t("hero.button")}
     </ButtonLink>
   </div>
 </Container>
