--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import i18next, { t } from "i18next"
+import { HeadHrefLangs } from "astro-i18next/components"
+
 export interface Props {
   title: string
 }
@@ -8,15 +11,17 @@ const GA_ID = import.meta.env.PUBLIC_GA_ID;
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="w-screen overflow-x-hidden">
+<html lang={i18next.language} class="w-screen overflow-x-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="preconnect" href="https://rsms.me/" />
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <meta name="generator" content={Astro.generator} />
+
     <title>{title}</title>
+    <meta name="description" content={t("site.description")} />
+
+    <HeadHrefLangs />
 
     {GA_ID && (
       <>
@@ -30,19 +35,18 @@ const GA_ID = import.meta.env.PUBLIC_GA_ID;
       </>
     )}
   </head>
-  <body class="w-screen overflow-x-hidden bg-slate-900 antialiased">
+  <body class="w-screen overflow-x-hidden bg-slate-900 antialiased font-sans">
     <slot />
   </body>
 </html>
 
 <style is:global>
-  :root {
-    font-family: "Inter", sans-serif;
-  }
-
-  @supports (font-variation-settings: normal) {
-    :root {
-      font-family: "Inter var", sans-serif;
-    }
+  @font-face {
+    font-family: "Inter var";
+    font-style: normal;
+    font-weight: 100 900;
+    font-display: swap;
+    font-named-instance: "Regular";
+    src: url("/fonts/Inter-roman.var.woff2?v=3.19") format("woff2");
   }
 </style>
