--- a/src/components/FooterBlock.astro
+++ b/src/components/FooterBlock.astro
@@ -25,7 +25,7 @@ const items = [
 
 <div class="bg-slate-900 py-12 text-white">
   <Container class="flex items-center justify-between" small>
-    <a href="/" class="font-bold">Razom &copy; 2023</a>
+    <span class="font-bold">Razom &copy; 2023</span>
 
     <ul class="hidden gap-x-2 md:flex">
       {items.map(({ label, link }) => (
