--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,7 +18,7 @@ import Container from "./Container.astro";
       {t("hero.subTitle")}
     </p>
 
-    <ButtonLink href="#join-beta" class="mx-auto">
+    <ButtonLink href="#join-beta">
       {t("hero.button")}
     </ButtonLink>
   </div>
