--- a/src/components/LanguageSwitcher.astro
+++ b/src/components/LanguageSwitcher.astro
@@ -2,7 +2,7 @@
 import i18next, { t } from "i18next"
 
 const isEng = i18next.language === "en"
-const isUkr = i18next.language === "ua"
+const isUkr = i18next.language === "uk"
 ---
 <div class="flex font-medium">
   <a
