--- a/src/pages/uk/index.astro
+++ b/src/pages/uk/index.astro
@@ -9,7 +9,7 @@ import SubscribeBlock from "../../components/SubscribeBlock.astro";
 import FromCreatorBlock from "../../components/FromCreatorBlock.astro";
 import FooterBlock from "../../components/FooterBlock.astro";
 
-changeLanguage("ua");
+changeLanguage("uk");
 ---
 
 <Layout title={t("site.title")}>
