--- a/src/components/QuoteBlock.astro
+++ b/src/components/QuoteBlock.astro
@@ -16,7 +16,7 @@ import Waves from "./Waves.astro"
           <span class="bg-brand-500 px-1 font-medium text-white md:px-2"></span>
         </Trans>
       </p>
-      {i18next.language !== "ua" && (
+      {i18next.language !== "uk" && (
         <p class="mt-2 lg:mt-6 text-sm text-slate-700 dark:text-slate-800 sm:text-base md:text-lg lg:text-xl">
           <Trans i18nKey="quote.description">
             <span class="font-medium"></span>
