Rename UA to UK [2]

--- a/src/components/LanguageSwitcher.astro
+++ b/src/components/LanguageSwitcher.astro
@@ -12,7 +12,7 @@ const isUkr = i18next.language === "uk"
     <span class="transform translate-y-[1px] inline-block">🇬🇧</span>
   </a>
   <a
-    href="/ua"
+    href="/uk"
     class={`rounded-r-full py-1.5 pr-4 pl-2.5 ${isUkr ? "bg-white/10 cursor-default" : "bg-white/5 hover:bg-white/10"}`}
   >
     <span class="transform translate-y-[1px] inline-block">🇺🇦</span>
