Add image to hero block

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,12 +1,15 @@
 ---
 import { t } from "i18next"
+import { Picture } from "@astrojs/image/components"
+
+import MobileAppImage from "../assets/images/marketing-app-project-view.png"
 import ButtonLink from "./ButtonLink.astro"
 import Container from "./Container.astro";
 ---
 
-<Container class="flex flex-1 items-center justify-center" small>
-  <div>
-    <div class="mb-4 text-right text-4xl sm:text-6xl md:text-8xl">
+<Container class="flex flex-1 items-center justify-center relative">
+  <div class="pr-24 md:pr-48">
+    <div class="mb-4 md:text-right text-4xl sm:text-6xl md:text-8xl">
       🚀
     </div>
 
@@ -21,5 +24,14 @@ import Container from "./Container.astro";
     <ButtonLink href="#join-beta">
       {t("hero.button")}
     </ButtonLink>
+  </div>
+
+  <div class="absolute -right-36 md:-right-48 top-1/2 transform -rotate-12 -translate-y-1/2 w-[250px] md:w-[350px] h-full z-50">
+    <Picture
+      src={MobileAppImage}
+      widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px"
+      alt="Picture of mobile app"
+      class="object-fit"
+    />
   </div>
 </Container>
