--- a/src/components/ButtonLink.astro
+++ b/src/components/ButtonLink.astro
@@ -6,7 +6,7 @@ const { href, class: className } = Astro.props
 
 <a
   href={href}
-  class={twMerge("inline-block text-xl font-semibold px-6 py-2.5 rounded-full bg-brand-500 hover:bg-brand-600 text-white", className)}
+  class={twMerge("inline-block whitespace-nowrap text-lg md:text-xl font-semibold px-6 py-2.5 rounded-full bg-brand-500 hover:bg-brand-600 text-white", className)}
 >
   <slot />
 </a>
