--- a/src/components/HeaderBlock.astro
+++ b/src/components/HeaderBlock.astro
@@ -4,7 +4,7 @@ import Waves from "./Waves.astro"
 import Hero from "./Hero.astro";
 ---
 
-<div class="flex h-[85vh] max-h-[1200px] flex-col bg-slate-900 text-slate-100 dark:text-slate-200">
+<div class="flex min-h-[85vh] max-h-[1200px] flex-col bg-slate-900 text-slate-100 dark:text-slate-200">
   <Navbar />
   <Hero />
 </div>
