Add OG tags. Fix ESLint

--- a/src/components/FeaturesBlock.astro
+++ b/src/components/FeaturesBlock.astro
@@ -45,7 +45,7 @@ import ButtonLink from "./ButtonLink.astro"
       </FeatureItem>
     </div>
 
-    <div class="text-center mt-12 md:mt-16">
+    <div class="mt-12 text-center md:mt-16">
       <ButtonLink href="#join-beta">
         {t("hero.button")}
       </ButtonLink>
