--- a/src/components/FromCreatorBlock.astro
+++ b/src/components/FromCreatorBlock.astro
@@ -4,7 +4,6 @@ import { Trans } from "astro-i18next/components"
 
 import Container from "./Container.astro"
 import Waves from "./Waves.astro"
-import Highlight from "./Highlight.astro"
 ---
 <Waves wavesColor="fill-slate-900" bgColor="bg-brand-500 dark:bg-slate-400" />
 
@@ -24,7 +23,7 @@ import Highlight from "./Highlight.astro"
       <p>
         <a
           href="mailto:andrew@kodkod.me"
-          class="text-slate-100 font-medium hover:text-slate-300 dark:text-slate-200 dark:hover:text-slate-300"
+          class="font-medium text-slate-100 hover:text-slate-300 dark:text-slate-200 dark:hover:text-slate-300"
         >
           andrew@kodkod.me
         </a>
