--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,9 +7,9 @@ import ButtonLink from "./ButtonLink.astro"
 import Container from "./Container.astro";
 ---
 
-<Container class="flex flex-1 items-center justify-center relative">
+<Container class="relative flex flex-1 items-center justify-center">
   <div class="pr-24 md:pr-48">
-    <div class="mb-4 md:text-right text-4xl sm:text-6xl md:text-8xl">
+    <div class="mb-4 text-4xl sm:text-6xl md:text-right md:text-8xl">
       🚀
     </div>
 
@@ -26,12 +26,12 @@ import Container from "./Container.astro";
     </ButtonLink>
   </div>
 
-  <div class="absolute -right-36 md:-right-48 top-1/2 transform -rotate-12 -translate-y-1/2 w-[250px] md:w-[350px] h-full z-50">
+  <div class="absolute -right-36 top-1/2 z-50 h-full w-[250px] -translate-y-1/2 -rotate-12 md:-right-48 md:w-[350px]">
     <Picture
       src={MobileAppImage}
       widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px"
       alt="Picture of mobile app"
-      class="object-fit"
+      class="object-contain"
     />
   </div>
 </Container>
