--- a/src/components/LanguageSwitcher.astro
+++ b/src/components/LanguageSwitcher.astro
@@ -1,5 +1,5 @@
 ---
-import i18next, { t } from "i18next"
+import i18next from "i18next"
 
 const isEng = i18next.language === "en"
 const isUkr = i18next.language === "uk"
@@ -7,14 +7,14 @@ const isUkr = i18next.language === "uk"
 <div class="flex font-medium">
   <a
     href="/"
-    class={`rounded-l-full py-1.5 pl-4 pr-2.5 ${isEng ? "bg-white/10 cursor-default" : "bg-white/5 hover:bg-white/10"}`}
+    class={`rounded-l-full py-1.5 pl-4 pr-2.5 ${isEng ? "cursor-default bg-white/10" : "bg-white/5 hover:bg-white/10"}`}
   >
-    <span class="transform translate-y-[1px] inline-block">🇬🇧</span>
+    <span class="inline-block translate-y-[1px]">🇬🇧</span>
   </a>
   <a
     href="/uk"
-    class={`rounded-r-full py-1.5 pr-4 pl-2.5 ${isUkr ? "bg-white/10 cursor-default" : "bg-white/5 hover:bg-white/10"}`}
+    class={`rounded-r-full py-1.5 pl-2.5 pr-4 ${isUkr ? "cursor-default bg-white/10" : "bg-white/5 hover:bg-white/10"}`}
   >
-    <span class="transform translate-y-[1px] inline-block">🇺🇦</span>
+    <span class="inline-block translate-y-[1px]">🇺🇦</span>
   </a>
 </div>
