--- a/src/components/QuoteBlock.astro
+++ b/src/components/QuoteBlock.astro
@@ -17,7 +17,7 @@ import Waves from "./Waves.astro"
         </Trans>
       </p>
       {i18next.language !== "uk" && (
-        <p class="mt-2 lg:mt-6 text-sm text-slate-700 dark:text-slate-800 sm:text-base md:text-lg lg:text-xl">
+        <p class="mt-2 text-sm text-slate-700 dark:text-slate-800 sm:text-base md:text-lg lg:mt-6 lg:text-xl">
           <Trans i18nKey="quote.description">
             <span class="font-medium"></span>
             <span class="font-medium"></span>
