--- a/src/components/SubscribeBlock.astro
+++ b/src/components/SubscribeBlock.astro
@@ -30,8 +30,8 @@ const MAILCHIMP_TAGS = import.meta.env.PUBLIC_MAILCHIMP_TAGS
         type="email"
         name="EMAIL"
         placeholder={t("subscribe.emailPlaceholder")}
-        class="w-full rounded-full bg-white px-8 py-6 pr-24 text-xl font-medium text-slate-800 ring-4 ring-brand-600 dark:ring-slate-500 placeholder:text-slate-500 focus:outline-none focus:ring-2 dark:bg-slate-300 md:text-2xl"
-      >
+        class="w-full rounded-full bg-white px-8 py-6 pr-24 text-xl font-medium text-slate-800 ring-4 ring-brand-600 placeholder:text-slate-500 focus:outline-none focus:ring-2 dark:bg-slate-300 dark:ring-slate-500 md:text-2xl"
+        >
 
       <div class="hidden">
         <input type="hidden" name="tags" value={MAILCHIMP_TAGS}>
