--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,11 +2,6 @@
 import i18next, { t } from "i18next"
 import { HeadHrefLangs } from "astro-i18next/components"
 
-export interface Props {
-  title: string
-}
-
-const { title } = Astro.props
 const GA_ID = import.meta.env.PUBLIC_GA_ID;
 ---
 
@@ -18,8 +13,12 @@ const GA_ID = import.meta.env.PUBLIC_GA_ID;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
 
-    <title>{title}</title>
+    <title>{t("site.title")}</title>
     <meta name="description" content={t("site.description")} />
+
+    <meta property="og:title" content={t("site.title")} />
+    <meta property="og:description" content={t("site.description")} />
+    <meta property="og:image" content="https://getrazom.app/images/og-image.png" />
 
     <HeadHrefLangs />
 
@@ -35,19 +34,19 @@ const GA_ID = import.meta.env.PUBLIC_GA_ID;
       </>
     )}
   </head>
-  <body class="w-screen overflow-x-hidden bg-slate-900 antialiased font-sans">
+  <body class="w-screen overflow-x-hidden bg-slate-900 font-sans antialiased">
     <slot />
 
     <script>
-      document.querySelectorAll("a[href^='#']").forEach((anchor) => {
-        anchor.addEventListener("click", function (e) {
-          e.preventDefault()
+    document.querySelectorAll("a[href^='#']").forEach((anchor) => {
+      anchor.addEventListener("click", function(e) {
+        e.preventDefault()
 
-          document.querySelector(this.getAttribute("href")).scrollIntoView({
-            behavior: "smooth"
-          })
+        document.querySelector(this.getAttribute("href")).scrollIntoView({
+          behavior: "smooth",
         })
       })
+    })
     </script>
   </body>
 </html>
